# Protobuf-VS-FlatBuffers-VS-Json

./: CMakeLists.txt  Message.h  README.md  fbsParser.cpp  fbsParser.h  fbsSchema.fbs  fbsSchema_generated.h  jsonParser.h  pbParser.h  serializationTest.cpp  workflow.md
fbsgenerate/: fbsschema.fbs  fbsschema_generated.h
flatbuffers-2.0.0/: CMakeLists.txt
pbgenerate/: protoSchema.pb.cc  protoSchema.pb.h  protoSchema.proto
pbgenerate/protobuf-3.4.1/: CHANGES.txt  Makefile  config.h  config.status  libtool
pbgenerate/protobuf-3.4.1/benchmarks/: Makefile
pbgenerate/protobuf-3.4.1/conformance/: Makefile
pbgenerate/protobuf-3.4.1/gmock/: Makefile  config.status  libtool
pbgenerate/protobuf-3.4.1/gmock/gtest/: Makefile  config.status  libtool
pbgenerate/protobuf-3.4.1/gmock/gtest/scripts/: gtest-config
pbgenerate/protobuf-3.4.1/gmock/scripts/: gmock-config
pbgenerate/protobuf-3.4.1/src/: Makefile  js_embed  libprotobuf-lite.la  libprotobuf.la  libprotoc.la  protoc
pbgenerate/protobuf-3.4.1/src/.libs/: libprotobuf.14.dylib  protoc
pbgenerate/protobuf-3.4.1/src/google/protobuf/.deps/: any.Plo  any.pb.Plo  api.pb.Plo  arena.Plo  arenastring.Plo  descriptor.Plo  descriptor.pb.Plo  descriptor_database.Plo  duration.pb.Plo  dynamic_message.Plo  empty.pb.Plo  extension_set.Plo  extension_set_heavy.Plo  field_mask.pb.Plo  generated_message_reflection.Plo  map_field.Plo  (+17 more)
pbgenerate/protobuf/lib/: libprotobuf-lite.14.dylib  libprotobuf-lite.la  libprotobuf.la  libprotoc.14.dylib  libprotoc.la
pbgenerate/protobuf/lib/pkgconfig/: protobuf-lite.pc  protobuf.pc
(+140 files in other folders)
